--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ tzlocal = "^4.2"
 omegaconf = "^2.2.3"
 
 [tool.poetry.dev-dependencies]
+black = "^22.10.0"
+isort = "^5.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
